--- a/fce/post1.html
+++ b/fce/post1.html
@@ -53,9 +53,9 @@ nav {
     
     <img src="https://umaidango.github.io/blog/usver.png" style="height: 72px;position: absolute;top: 0px;left: 20px;background: #ffffff6e;">
         <ul style="margin-left: 130px;margin-top: 20px;">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/lighters.html">著者</a></li>
-            <li><a href="/osusume.html">おすすめ記事</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="lighters.html">社員</a></li>
+            <li><a href="osusume.html">おすすめ記事</a></li>
             <li><a href="https://umaidango.github.io/">U Softwareへ戻る</a></li>
             <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfbZVJjel5nd36ga8kInLEVYR1pmM0PApW7wLVCCFTzQETcIQ/viewform?usp=sf_link">ライター募集</a></li>
         </ul>
@@ -66,7 +66,7 @@ nav {
 <img height="324" width="" style="border-radius: 10px;" src="https://umaidango.github.io/tmp/aodwokdowlpbnenfwk.jpg">
 <h1 style="">【FCEのとは】　Fox Code Editor紹介！</h1>
   <br><br>
-  <div style="border-radius: 10px;background: #d3e8ff;padding: 48px;width: 80%;text-align: center;margin: 0 auto;"><p>動画をご視聴ください⇩⇩</p><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1024337461?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="fce"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div style="border-radius: 10px;background: #d3e8ff;padding: 48px;width: 80%;text-align: center;margin: 0 auto;"><p>動画をご視聴ください⇩⇩</p><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1024337461?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:800px;height:500px;" title="fce"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 <div><h3>目玉機能👀</h3><div style="margin: 20px;">
   
